# Parking-API

./: .dockerignore  .env.example  .env.exemple  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: configs.py
app/db/: mongo.py
app/parking/: crud.py  errors.py  repo.py  router.py  schemas.py  service.py
app/parking/tests/: conftest.py  test_delete.py  test_enter.py  test_flows.py  test_functions.py  test_history.py  test_leave.py  test_pay.py
app/parking/utils/: helper_functions.py
tests/: conftest.py  test_delete.py  test_enter.py  test_flows.py  test_functions.py  test_history.py  test_leave.py  test_pay.py
